--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./app.component.css">
   <title>Portfolio | Élito Lenon Prates</title>
 </head>
 <body>
   <nav class="menu">
     <ul>
        <li class="menu__item">
-        <a href="/">Pagina Inicial</a>
+        <a href="/">Home</a>
        </li>
 
        <li class="menu__item">
@@ -21,8 +22,8 @@
         <a href="#">Resumo</a>
        </li>
 
-       <li class="menu__icon">
-        <img src="/src/assets/images/icons/elitoDev.svg" alt="Icone-Logo">
+       <li class="menu__item menu__icon">
+        <img src="../assets/images/icons/IconLogo.svg" alt="Icone-Logo" >
        </li>
 
        <li class="menu__item">
