--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
        </li>
 
        <li class="menu__item menu__icon">
-        <img src="../assets/images/icons/IconLogo.svg" alt="Icone-Logo" >
+        <img src="../assets/images/icons/elitoDev.svg" height="120" width="120" alt="Icone-Logo" >
        </li>
 
        <li class="menu__item">
@@ -40,7 +40,24 @@
     </ul>
   </nav>
   <div class="container">
-    ...
+    <a href="#" class="card">
+      <img class="card__bacground" src="../assets/images/site/degradeRoxo.webp">
+      <img class="card__image" src="../assets/images/site/montagemTransp.png" alt="Sobre">
+      <h2 class="card__title"> Sobre </h2>
+    </a>
+
+    <a href="#" class="card">
+      <img class="card__bacground" src="../assets/images/site/degradeRoxo.webp">
+      <img class="card__image" src="../assets/images/site/montagemTransp.png" alt="Curriculo">
+      <h2 class="card__title"> Curriculo </h2>
+    </a>
+
+    <a href="#" class="card">
+      <img class="card__bacground" src="../assets/images/site/degradeRoxo.webp">
+      <img class="card__image" src="../assets/images/site/montagemTransp.png" alt="Skills">
+      <h2 class="card__title"> Skills </h2>
+    </a>
+
   </div>
 
 </body>
