--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,21 +18,60 @@ body::before {
 }
 
 .menu {
-  padding: 5rem 0;
+  padding: 1rem 0;
   width: 100%;
   text-align: center;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .menu__item {
   display: inline-block;
   text-transform: uppercase;
-  margin: 0 1.25rem;
+  margin: 0  1.25rem;
 }
 
 .menu__icon {
-  align-self: start;
   width: -1.5rem;
   margin: 0 2.5rem;
-
+  vertical-align: middle;
 }
+
+.container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+ }
+
+ .card {
+  border: 0.5rem solid white;
+  width: calc(100% / 3 - 8%);
+  height: 70vh;
+  position: relative;
+ }
+
+ .card__bacground {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  opacity: 1;
+ }
+
+ .card__image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  position: relative;
+ }
+
+ .card__title {
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+ }
